# action-video-pipeline

./: .gitignore  README.md  pyproject.toml
config/: __init__.py  settings.yaml
reid/: __init__.py
reid/config/: __init__.py  config.py  sbs_R50-ibn.yml
reid/layers/: __init__.py  batch_norm.py  splat.py  weight_init.py
reid/modeling/backbones/: __init__.py  resnet.py
reid/modeling/heads/: __init__.py  clas_head.py  embedding_head.py
reid/modeling/losses/: __init__.py  cross_entroy_loss.py  focal_loss.py
reid/models/: __init__.py  densenet.py  hacnn.py  inceptionresnetv2.py  inceptionv4.py  mlfn.py  mobilenetv2.py  nasnet.py  osnet.py  pcb.py  resnet.py  resnet_ibn_a.py  resnet_ibn_b.py  resnetmid.py  senet.py  shufflenetv2.py
reid/utils/: __init__.py  baseline.py  build.py  checkpoint.py  comm.py  feature_extractor.py  file_io.py  model_complexity.py  registry.py  tools.py  torchtools.py
scripts/: base.py  main.py  preprocessor.py  track.py
utils/: model_utils.py
utils/models/: __init__.py  base.py  kmeans.py  yolo.py
utils/tracker_utils/: bot_sort.py  core.py  jersey_ocr.py  matching.py
